Changelog for Touchdown
=======================

0.5.3 (unreleased)
------------------

- Allow setting 'ssl_policy' on custom origins.


0.5.2 (2016-01-19)
------------------

- Fix network acl entry port validation and allow 'port' to be set to '*'.

- Fix issue updating an Assume Role Policy.

- Fix some issues diffing dicts.


0.5.1 (2016-01-17)
------------------

- Touchdown now reports resource changes better, especially when attributes
  transition from unset to set states.

- Various diffing bug fixes.


0.5.0 (2016-01-15)
------------------

- Add support for AWS NAT Gateway.

- Add support for read and write operations against local files::

    folder = workspace.add_local_folder(name=os.getcwd())
    local_file = folder.add_file(name='production.cfg')

- The contents of any file can be assigned to any string argument. For
  example::

      aws.add_keypair(
          name='my-keypair',
          public_key=folder.add_file(name='production.pub'),
      )

- Add support for GPG encryption. This layers upon the local file system
  abstraction::

    gpg = workspace.add_gpg()
    local_file = gpg.add_cipher(file=local_file)

- Add integration between Amazon KMS and the local file system abstraction::

    kms = aws.add_key(name='my-deployment-key')
    local_file = kms.add_cipher(file=local_file)

- Add support for Amazon KMS Grants.

- Add a ``touchdown edit`` command that can transparently decrypt, fire up
  ``$EDITOR`` and then re-encrypt a file wrapped in GPG or KMS encryption.

- Add a mechanism for ConfParser backed configuration that is mapped to
  touchdowns resource system::

    conf = local_file.add_config()
    asg_min = conf.add_string(
        name='scaling.web.min',
        default=1,
        min=0,
        max=1,
    )

    web_asg = aws.add_auto_scaling_group(
        name='web',
        min=asg_min,
    )

- You can use S3 files anywhere you would use local files::

    bucket = aws.add_bucket(name='mybucket')